IHM final_integration/CAS4-SDK/VC2013/CAS4.h

extern int __callconv casMeasureDarkCurrent( int ADevice );
extern int __callconv casClearDarkCurrent( int ADevice );
extern double __callconv casGetDarkCurrent( int ADevice, int AIndex );
extern void __callconv casSetDarkCurrent( int ADevice, int AIndex, double Value );
//////////////////////////
// Deprecated methods!! //
//////////////////////////
extern int __callconv casGetInitialized( int ADevice);
extern int __callconv casGetDeviceType( int ADevice );
extern int __callconv casGetDeviceOption( int ADevice );
extern int __callconv casGetAdcBits( int ADevice );
extern int __callconv casGetAdcRange( int ADevice );
extern char* __callconv casGetSerialNumber( int ADevice, char* Dest, int AMaxLen );
extern int __callconv casGetDeadPixels( int ADevice);
extern int __callconv casGetVisiblePixels( int ADevice);
extern int __callconv casGetPixels( int ADevice);
extern int __callconv casGetModel( int ADevice);
extern double __callconv casGetAmpOffset( int ADevice);
extern int __callconv casGetIntTimeMin( int ADevice );
extern int __callconv casGetIntTimeMax( int ADevice );
extern int __callconv casBackgroundMeasure( int ADevice );
extern int __callconv casGetIntegrationTime( int ADevice );
extern void __callconv casSetIntegrationTime( int ADevice, int Value );
extern int __callconv casGetAccumulations( int ADevice );
extern void __callconv casSetAccumulations( int ADevice, int Value );
extern double __callconv casGetAutoIntegrationLevel( int ADevice );
extern void __callconv casSetAutoIntegrationLevel( int ADevice, double ALevel );
extern int __callconv casGetAutoIntegrationTimeMax( int ADevice );
extern void __callconv casSetAutoIntegrationTimeMax( int ADevice, int AMaxTime );
extern int __callconv casClearBackground( int ADevice );
extern int __callconv casGetNeedBackground( int ADevice );
extern void __callconv casSetNeedBackground( int ADevice, int Value );
extern int __callconv casGetTop100( int ADevice );
extern void __callconv casSetTop100( int ADevice, int AIndex );
extern double __callconv casGetTop100Distance( int ADevice );
extern void __callconv casSetTop100Distance( int ADevice, double ADistance );
extern int __callconv casGetFilter( int ADevice );
extern void __callconv casSetFilter( int ADevice, int AFilter );
extern int __callconv casGetActualFilter( int ADevice );
extern int __callconv casGetNewDensityFilter( int ADevice );
extern void __callconv casSetNewDensityFilter( int ADevice, int AFilter );
extern int __callconv casGetForceFilter( int ADevice );
extern void __callconv casSetForceFilter( int ADevice, int AForce );
extern int __callconv casGetParamSets( int ADevice );
extern void __callconv casSetParamSets( int ADevice, int Value );
extern int __callconv casGetParamSet( int ADevice );
extern void __callconv casSetParamSet( int ADevice, int Value );
extern char* __callconv casGetCalibrationFileName( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetCalibrationFileName( int ADevice, char* Value );
extern char* __callconv casGetConfigFileName( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetConfigFileName( int ADevice, char* Value );
extern char* __callconv casGetTransmissionFileName( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetTransmissionFileName( int ADevice, char* Value );
extern int __callconv casValidateConfigAndCalibFile( int ADevice );
extern char* __callconv casGetCalibrationUnit( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetCalibrationUnit( int ADevice, char* Value );
extern double __callconv casGetBackground( int ADevice, int AIndex );
extern void __callconv casSetBackground( int ADevice, int AIndex, double Value );
extern int __callconv casGetMaxAdcValue( int ADevice );
extern int __callconv casGetCheckStart( int ADevice );
extern void __callconv casSetCheckStart( int ADevice, int Value );
extern int __callconv casGetCheckStop( int ADevice );
extern void __callconv casSetCheckStop( int ADevice, int Value );
extern double __callconv casGetColormetricStart( int ADevice );
extern void __callconv casSetColormetricStart( int ADevice, double Value );
extern double __callconv casGetColormetricStop( int ADevice );
extern void __callconv casSetColormetricStop( int ADevice, double Value );
extern int __callconv casGetObserver( void );
extern void __callconv casSetObserver( int ADevice );
extern double __callconv casGetSkipLevel( int ADevice );
extern void __callconv casSetSkipLevel( int ADevice, double ASkipLevel );
extern int __callconv casGetSkipLevelEnabled( int ADevice );
extern void __callconv casSetSkipLevelEnabled( int ADevice, int ASkipLevel );
extern int __callconv casGetTriggerSource( int ADevice );
extern void __callconv casSetTriggerSource( int ADevice, int Value );
extern int __callconv casGetLine1FlipFlop( int ADevice );
extern void __callconv casSetLine1FlipFlop( int ADevice, int Value );
extern int __callconv casGetTimeout( int ADevice );
extern void __callconv casSetTimeout( int ADevice, int Value );
extern int __callconv casGetFlash( int ADevice );
extern void __callconv casSetFlash( int ADevice, int Value );
extern int __callconv casGetFlashDelayTime( int ADevice );
extern void __callconv casSetFlashDelayTime( int ADevice, int Value );
extern int __callconv casGetFlashOptions( int ADevice );
extern void __callconv casSetFlashOptions( int ADevice, int Value );
extern int __callconv casGetDelayTime( int ADevice );
extern void __callconv casSetDelayTime( int ADevice, int Value );
extern int __callconv casGetStartTime( int ADevice );
extern int __callconv casGetACQTime( int ADevice );
extern int __callconv casReadWatch( int ADevice );
extern int __callconv casStopTime( int ADevice, int ARefTime );
extern void __callconv casMultiTrackCopySet( int ADevice );
extern int __callconv casMultiTrackReadData( int ADevice, int ATrack );