IHM final_integration/CAS4-SDK/Delphi/CAS4DLL.pas


//deprecated; see documentation for replacement methods
function casGetInitialized; external ModulName;
function casGetDeviceType; external ModulName;
function casGetDeviceOption; external ModulName;
function casGetAdcBits; external ModulName;
function casGetAdcRange; external ModulName;
function casGetSerialNumber; external ModulName;
function casGetDeadPixels; external ModulName;
function casGetVisiblePixels; external ModulName;
function casGetPixels; external ModulName;
function casGetModel; external ModulName;
function casGetAmpOffset; external ModulName;
function casGetIntTimeMin; external ModulName;
function casGetIntTimeMax; external ModulName;
function casBackgroundMeasure; external ModulName name 'casMeasureDarkCurrent';
function casGetIntegrationTime; external ModulName;
procedure casSetIntegrationTime; external ModulName;
function casGetAccumulations; external ModulName;
procedure casSetAccumulations; external ModulName;
function casGetAutoIntegrationLevel; external ModulName;
procedure casSetAutoIntegrationLevel; external ModulName;
function casGetAutoIntegrationTimeMax; external ModulName;
procedure casSetAutoIntegrationTimeMax; external ModulName;
function casClearBackground; external ModulName name 'casClearDarkCurrent';
function casGetNeedBackground; external ModulName;
procedure casSetNeedBackground; external ModulName;
function casGetTop100; external ModulName;
procedure casSetTop100; external ModulName;
function casGetTop100Distance; external ModulName;
procedure casSetTop100Distance; external ModulName;
function casGetFilter; external ModulName;
procedure casSetFilter; external ModulName;
function casGetActualFilter; external ModulName;
function casGetNewDensityFilter; external ModulName;
procedure casSetNewDensityFilter; external ModulName;
function casGetForceFilter; external ModulName;
procedure casSetForceFilter; external ModulName;
function casGetParamSets; external ModulName;
procedure casSetParamSets; external ModulName;
function casGetParamSet; external ModulName;
procedure casSetParamSet; external ModulName;
function casGetCalibrationFileName; external ModulName;
procedure casSetCalibrationFileName; external ModulName;
function casGetConfigFileName; external ModulName;
procedure casSetConfigFileName; external ModulName;
function casGetTransmissionFileName; external ModulName;
procedure casSetTransmissionFileName; external ModulName;
function casValidateConfigAndCalibFile; external ModulName;
function casGetCalibrationUnit; external ModulName;
procedure casSetCalibrationUnit; external ModulName;
function casGetBackground; external ModulName name 'casGetDarkCurrent';
procedure casSetBackground; external ModulName name 'casSetDarkCurrent';
function casGetMaxAdcValue; external ModulName;
function casGetCheckStart; external ModulName;
procedure casSetCheckStart; external ModulName;
function casGetCheckStop; external ModulName;
procedure casSetCheckStop; external ModulName;
function casGetColormetricStart; external ModulName;
procedure casSetColormetricStart; external ModulName;
function casGetColormetricStop; external ModulName;
procedure casSetColormetricStop; external ModulName;
function casGetObserver; external ModulName;
procedure casSetObserver; external ModulName;
function casGetSkipLevel; external ModulName;
procedure casSetSkipLevel; external ModulName;
function casGetSkipLevelEnabled; external ModulName;
procedure casSetSkipLevelEnabled; external ModulName;
function casGetTriggerSource; external ModulName;
procedure casSetTriggerSource; external ModulName;
function casGetLine1FlipFlop; external ModulName;
procedure casSetLine1FlipFlop; external ModulName;
function casGetTimeout; external ModulName;
procedure casSetTimeout; external ModulName;
function casGetFlash; external ModulName;
procedure casSetFlash; external ModulName;
function casGetFlashDelayTime; external ModulName;
procedure casSetFlashDelayTime; external ModulName;
function casGetFlashOptions; external ModulName;
procedure casSetFlashOptions; external ModulName;
function casGetDelayTime; external ModulName;
procedure casSetDelayTime; external ModulName;
function casGetStartTime; external ModulName;
function casGetACQTime; external ModulName;
function casReadWatch; external ModulName;
function casStopTime; external ModulName;
procedure casMultiTrackCopySet; external ModulName;
function casMultiTrackReadData; external ModulName;

end.